# nanobanana-pro-skill

./: .gitignore  environment.yml  nanobanana-pro.skill  pyproject.toml
nanobanana-pro/: SKILL.md
nanobanana-pro/references/: examples.md  prompt-schemas.md  semantic-fields.md  setup-guide.md  techniques.md  vertex-ai-api.md
src/nanobanana_pro/: __init__.py  client.py  generate.py  image_input.py  utils.py
tests/: test_client.py  test_generate.py  test_image_input.py  test_utils.py
